--- a/style/soldpress.css
+++ b/style/soldpress.css
@@ -1,3 +1,9 @@
+	
+	#map-street label { width: auto; display:inline; }
+	#map-street img {max-width: none;}
+	#map-canvas img {max-width: none;}	
+	#map-canvas label { width: auto; display:inline; }
+	
 	.well2 {
 		min-height: 20px;
 		padding: 19px;
